# browser-timer

./: .gitignore  .gitmodules  README.md  docker-compose-LE.yml  docker-compose-deploy.yml  docker-compose.yml  docker-compose2.yml  docker-compose_LE.yml  nginx.conf  nginx2.conf  pw-timing-data-row0.csv  server.cert  server.key  text_test.ipynb  timer_test.ipynb  timer_test_script.py  update.sh
browser-timer-ws/: Cargo.toml  Dockerfile  README.md
browser-timer-ws/src/: data.rs  main.rs  message.rs  server.rs  server_http.rs  server_ws.rs
src/: cross_origin.html  index.html  same_origin.html  styles.css  timer.js
src/browser/: browser_test.html  script.js  styles.css
src/browser/extended/: browser_test.html  script.js
src/cont-auth/: cross_origin.html  read-data-v3.js  rec-sim-typing-v3.html  rec-typing-v3.js  same_origin.html  script.js  sim-typing-v3.js  styles.css
src/cont-auth/extern_input/: cross_origin.html  same_origin.html  script.js  styles.css
src/cont-auth/warm-up/: cross_origin.html  same_origin.html  script.js
src/free-text/: cross_origin.html  same_origin.html  script.js
src/live/: index.html  script.js  styles.css
src/passwd/: cross_origin.html  same_origin.html  script.js  styles.css
src/passwd/warm-up/: cross_origin.html  same_origin.html  script.js
src/remote/: index.html  script.js
src/remote-http/: index.html  script.js  styles.css
src/timer-precision/: cross_origin.html  same_origin.html  styles.css  timer.js
src/timer-precision/extern_input/: cross_origin.html  same_origin.html  styles.css  timer.js
(+6 files in other folders)
